fixed PUT and POST /trade.  Updated openapi.yaml
